Generazione 5 numeri random

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Simon Says</title>
 
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- LINK GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
