visualizzazione numeri in html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div class="container">
+
+        <div id="show-numbers-timeout">
+            
+        </div>
+
+    </div>
     
-
-
-
     <!-- LINK JS -->
     <script src="js/script.js"></script>
 
